fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2270,7 +2270,7 @@
 
 		}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 980px) {
 
 			.features section {
 				padding: 2em 1.5em 0.1em 1.5em ;
